# trickcal-bingo

./: .gitignore  bingo_env.py  bingo_policy.py  bingo_wrapper.py  config.yaml  config_no_store.yaml  dependencies  environments.yaml  main.py  pyproject.toml  train.py  trickcal_bingo.spec
.github/workflows/: build.yml
model/: best_model.pt  best_model_1pattern.pt  best_model_2patterns.pt  best_model_no_store.pt  last_model.pt  last_model_no_store.pt
